clusters/wrtk8s/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    external-dns.alpha.kubernetes.io/hostname: immich.jgarr.net
    external-dns.alpha.kubernetes.io/target: 10.1.1.152
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - immich.jgarr.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
